# internal/dto/register_dto.go
@@ -1,8 +1,8 @@
 package dto
 
 type RegisterRequest struct {
-	Name     string `json:"name" binding:"required,min=3,max=30"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=6"`
+	Name            string `json:"name" binding:"required,min=3,max=30"`
+	Email           string `json:"email" binding:"required,email"`
+	Password        string `json:"password" binding:"required,min=6,passwordvalidator"`
 	ConfirmPassword string `json:"confirm_password" binding:"required,eqfield=Password"`
 }
