# internal/dto/register_response_dto.go
@@ -1,7 +1,0 @@
-package dto
-
-type RegisterResponse struct {
-	ID    string `json:"id"`
-	Name  string `json:"name"`
-	Email string `json:"email"`
-}
